# Arvo

./: .editorconfig  .env.example  .gitignore  Makefile  README.md  agronomic-platform-spec.md
.claude/: launch.json
.github/workflows/: ci.yml
app/: README.md  app.json  eslint.config.js  package-lock.json  package.json
app/src/: theme.ts
app/src/api/: client.ts  types.ts
app/src/app/: _layout.tsx  login.tsx  register.tsx
app/src/app/(tabs)/: _layout.tsx  _layout.web.tsx  alerts.tsx  alerts.web.tsx  index.tsx  index.web.tsx  map.tsx  plants.tsx  plants.web.tsx  scouting.tsx  settings.tsx  weather.tsx
app/src/app/capture/: new.tsx
app/src/app/observation/: new.tsx
app/src/app/parcel/: [id].tsx  [id].web.tsx  new.tsx
app/src/app/plant/: [id].tsx  [id].web.tsx
app/src/auth/: AuthContext.tsx  storage.ts  ui.tsx
app/src/components/: AlertList.tsx  IndexChart.tsx  Logo.tsx  MapView.d.ts  MapView.native.tsx  MapView.ts  MapView.web.tsx  PlantMap.d.ts  PlantMap.native.tsx  PlantMap.web.tsx  WeatherPanel.tsx  glyphs.tsx  types.ts  ui.tsx  useOutsideDismiss.ts
app/src/components/map/: mapHtml.ts  plantMapHtml.ts
app/src/components/web/: FieldViewSwitcher.tsx  FieldWorkspaceHeader.tsx  PortalShell.tsx
app/src/features/: media.ts
app/src/features/insights/: alerts.ts  format.ts  series.ts  snooze.ts  useAlertActions.ts
app/src/features/parcels/: crops.ts  dialog.ts  hooks.ts  (+1 more)
app/src/i18n/: en.json  index.ts  it.json
app/src/offline/: hooks.ts  queue.ts
backend/: Cargo.toml  rust-toolchain.toml
backend/crates/api/: Cargo.toml
backend/crates/api/src/: audit.rs  config.rs  error.rs  main.rs  ratelimit.rs  routes.rs  security.rs  seed.rs  state.rs  util.rs
backend/crates/api/src/imagery/: mod.rs  raster.rs  stac.rs  synth.rs  worker.rs
backend/crates/api/src/jobs/: detect.rs  mod.rs
backend/crates/api/src/modules/: alerts.rs  auth.rs  captures.rs  farms.rs  indices.rs  mod.rs  observations.rs  orgs.rs  parcels.rs  plant_insights.rs  plant_tiles.rs  plants.rs  reports.rs  scenes.rs  tiles.rs  weather.rs
backend/crates/api/src/storage/: mod.rs
backend/crates/core/: Cargo.toml
backend/crates/core/src/: agro.rs  anomaly.rs  indices.rs  lib.rs  plant_anomaly.rs  plant_metrics.rs  registration.rs
backend/crates/worker/: Cargo.toml
backend/crates/worker/src/: detect.rs  extract.rs  main.rs  pipeline.rs  rollup.rs  sfm.rs
backend/migrations/: 0001_init.sql  0002_sync_cursor_and_hardening.sql  0070_plants.sql  0080_captures.sql  0090_plant_observations.sql  0100_plant_alerts.sql  0110_observations_plant.sql
docs/: AGENTS.md  API-PLANT.md  API.md  DESIGN.md  PHASE-PLANT.md  PHASE0.md
infra/: docker-compose.yml
scripts/: smoke.sh
services/plant-detect/: .dockerignore  Dockerfile  README.md  pytest.ini  requirements.txt
services/plant-detect/app/: __init__.py  chm.py  config.py  crowns.py  errors.py  geo.py  main.py  raster.py  rows.py  schemas.py
services/plant-detect/tests/: synthetic.py  test_api.py  test_contract.py  test_crowns.py  test_geo.py  test_rows.py
(+6 files in other folders)
