[workspace]
resolver = "2"
members = ["crates/core", "crates/api"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[profile.dev]
debug = 0

[patch.crates-io]
gdal = { git = "https://github.com/georust/gdal", branch = "master" }
gdal-sys = { git = "https://github.com/georust/gdal", branch = "master" }
