[package]
name = "arvo-api"
version.workspace = true
edition.workspace = true

[features]
default = []
# Real Sentinel-2 pixel compute + raster tiles/GeoTIFF (needs system GDAL, e.g. `brew install gdal`)
imagery = ["dep:gdal", "dep:png"]

[dependencies]
arvo-core = { path = "../core" }

axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace", "timeout"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json", "migrate",
    "derive", "macros",
] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

argon2 = "0.5"
jsonwebtoken = "9"
sha2 = "0.10"

reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
bytes = "1"

gdal = { version = "0.19", optional = true, features = ["bindgen"] }
png = { version = "0.17", optional = true }
