[package]
name = "arvo-worker"
version.workspace = true
edition.workspace = true

[features]
default = []
# Real pixel work (ODM outputs, CHM/crown delineation, per-plant sampling). Without it the
# `drone`/`prebuilt` stages fail with `stage_unsupported` and only `source="demo"` captures
# run end to end — docs/API-PLANT.md §"Builds without GDAL (CI default)".
imagery = ["dep:gdal"]

# Every dependency below is already in the workspace lockfile (same versions as arvo-api):
# arvo-worker adds no new external crate.
[dependencies]
arvo-core = { path = "../core" }

tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json", "derive",
] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls", "json",
] }

clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

gdal = { version = "0.19", optional = true, features = ["bindgen"] }
